--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -9,7 +9,7 @@
   display: flex;
   justify-content: space-between;
   margin: 0 auto;
-  padding-bottom: 44px;
+  padding-bottom: 33px;
 }
 
 .footer__social {
@@ -31,7 +31,7 @@
   @include mono;
   bottom: -53px;
   left: 50%;
-  margin-left: -33.8%;
+  margin-left: -33.6%;
   font-size: 13px;
   font-weight: normal;
   line-height: 24px;
@@ -107,12 +107,13 @@
   margin: 0 auto;
   padding-top: 14px;
   padding-bottom: 13px;
-  padding-right: 0.6%;
+  padding-right: 1.3%;
+  padding-left: 1.1%;
 }
 
 .footer__link-agreement {
   @include mono;
-  margin-left: 3.2%;
+  margin-left: 3.6%;
   font-size: 13px;
   font-weight: normal;
   line-height: 24px;
@@ -138,7 +139,7 @@
   .footer__wrapper {
     position: relative;
     flex-direction: column;
-    width: 720px;
+    width: 768px;
     padding-top: 2px;
     padding-bottom: 36px;
 
