--- a/source/sass/blocks/product.scss
+++ b/source/sass/blocks/product.scss
@@ -36,7 +36,7 @@
   }
 
   .product__wrapper h2 {
-    min-width: 610px;
+    width: 85%;
     margin-bottom: 48px;
     margin-left: 0;
     font-size: 32px;
