--- a/source/sass/common/global.scss
+++ b/source/sass/common/global.scss
@@ -55,11 +55,12 @@ body {
 }
 
 .container {
+  box-sizing: border-box;
   min-width: 1024px;
-  max-width: 1430px;
+  max-width: 1460px;
   margin: 0 auto;
-  padding-left: 5px;
-  padding-right: 5px;
+  padding-left: 15px;
+  padding-right: 15px;
 }
 
 @media (max-width: $desktop-width) {
