правит прозрачность модального окна, курсор в блоке преимуществ, ставит форму на место в desktop, выравнивает картинку

--- a/source/sass/blocks/about-company.scss
+++ b/source/sass/blocks/about-company.scss
@@ -4,6 +4,7 @@
   padding-bottom: 80px;
   background-size: 218px auto;
   background-position: 9.3% 51px;
+  // background-position: 8.7% 51px;
   background-repeat: no-repeat;
 
   &::before {
