--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -4,8 +4,8 @@
   flex-wrap: wrap;
   justify-content: center;
   padding-top: 110px;
-  padding-left: 7.5%;
-  padding-right: 7.5%;
+  padding-left: 144px;
+  padding-right: 144px;
   padding-bottom: 30px;
   box-sizing: border-box;
 
