--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -9,7 +9,7 @@
   display: flex;
   justify-content: space-between;
   margin: 0 auto;
-  padding-bottom: 33px;
+  padding-bottom: 44px;
 }
 
 .footer__social {
@@ -82,7 +82,7 @@
   display: flex;
   margin-top: 0;
   margin-bottom: 0;
-  padding-left: 62px;
+  padding-left: 5.8%;
   list-style: none;
 }
 
@@ -91,8 +91,8 @@
 }
 
 .footer__accordion-sub--margin-left {
-  width: 343px;
-  margin-left: 157px;
+  width: 350px;
+  margin-left: 16.8%;
   margin-right: 0;
 }
 
