--- a/source/sass/blocks/product.scss
+++ b/source/sass/blocks/product.scss
@@ -17,12 +17,9 @@
   margin-left: 9%;
   font-size: 36px;
   line-height: 51px;
+  font-weight: 600;
   letter-spacing: 0;
   color: #ffffff;
-
-  &-span {
-    letter-spacing: 0;
-  }
 }
 
 @media (max-width: $desktop-width) {
@@ -65,10 +62,10 @@
     font-size: 24px;
     line-height: 39px;
 
-    letter-spacing: 1.9px;
+    letter-spacing: 1.7px;
 
-    &-span {
-      letter-spacing: 2px;
+    & span {
+      letter-spacing: 1.9px;
     }
   }
 }
