--- a/source/sass/blocks/sub.scss
+++ b/source/sass/blocks/sub.scss
@@ -7,13 +7,10 @@
   list-style: none;
 }
 
-.sub__list--height {
-  height: 125px;
-}
-
 .sub p {
   @include mono;
   position: relative;
+  white-space: nowrap;
   margin-top: 0;
   margin-bottom: 0;
   font-size: 15px;
